service TestService {
  rpc ShuffleMessage(Message) returns (ShuffledMessage) {}
  rpc PrintMessage(Message) returns (Message) {}
}

message Message {
  required string message = 1;
}

message ShuffledMessage {
  required string shuffled_message = 1;
}